--- a/package.json
+++ b/package.json
@@ -35,13 +35,14 @@
     "start-server-webpack-plugin": "2.2.5",
     "style-loader": "^0.23.1",
     "superstatic": "6.0.3",
-    "truffle": "5.0.2",
-    "truffle-hdwallet-provider": "1.0.2",
-    "web3": "1.0.0-beta.37",
+    "web3": "1.8.1",
     "webpack": "^4.6.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "3.1.14",
-    "webpack-node-externals": "1.7.2"
+    "webpack-node-externals": "1.7.2",
+    "truffle": "^5.4.33",
+    "@truffle/hdwallet-provider": "^1.0.17",
+    "dotenv": "^16.0.3"
   },
   "dependencies": {}
 }
