--- a/package.json
+++ b/package.json
@@ -33,17 +33,18 @@
     "file-loader": "3.0.1",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "openzeppelin-solidity": "^1.10.0",
     "start-server-webpack-plugin": "2.2.5",
     "style-loader": "^0.23.1",
     "superstatic": "6.0.3",
     "truffle": "^5.4.33",
     "truffle-hdwallet-provider": "^1.0.17",
-    "web3": "1.8.1",
     "webpack": "^4.6.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "3.1.14",
     "webpack-node-externals": "1.7.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "openzeppelin-solidity": "^1.10.0",
+    "web3": "1.8.1"
+  }
 }
